tests/positive/test-success-float-arith.rooc
// Adding two positive numbers
fun main() -> int {  
    print_float(test1());
    println();
    print_float(test2());
    println();
    print_float(test3());
    println();
    print_float(test4());  
    return 0;
}

fun test1() -> float {
    return 10.0+5.0;
}

fun test2() -> float{
    return 10.0-5.0;
}

fun test3() -> float{
    return 10.0*5.0;
}

fun test4() -> float{
    return 10.0/5.0;
}