tests/negative/test-fail-builtin.rooc
fun main() -> int {   
    print_float(3.0); 
    return 0;
}